# my-cinema

./: .editorconfig  .gitignore  Cargo.toml  docker-compose.yml  go.work  go.work.sum  package.json  revive.toml
apps/movies-api/: .air.toml  Cargo.toml  Makefile  Rocket.toml  go.mod  go.sum  moon.yml  openapi.json
apps/movies-api/src/: main.rs  testing.go
apps/movies-api/src/cmd/cli/: main.go
apps/movies-api/src/cmd/http/: main.go
apps/movies-api/src/config/: config.go
apps/movies-api/src/domain/: health.go  movie.go  movie_test.go
apps/movies-api/src/domain/entity/: user_entity.rs
apps/movies-api/src/infra/db/: mongo.go
apps/movies-api/src/infra/http/: core-ctrl._test.go  core-ctrl.go  core-ctrl_test.go  middleware.go  movies-ctrl.go  server.go
apps/movies-api/src/infra/repository/: movies-inmemory-repository.go  movies-mongo-repository.go
apps/movies-api/src/infra/shutdown/: gracefully.go
apps/movies-api/src/infrastructure/: api_doc.rs  mod.rs  response.rs
apps/movies-api/src/infrastructure/controller/: catchers_ctrl.rs  common_ctrl.rs  me_ctrl.rs  mod.rs
apps/movies-api/src/usecase/: find-all-usecase.go  health-usecase.go  health-usecase_test.go  ingest-movies-file.go  ingest-movies-file_test.go  me_usecase.rs  mod.rs  usecases.go
apps/movies-api/src/usecase/__tests__/: movies-small.csv
apps/movies-db/: Cargo.toml  moon.yml
apps/movies-db/src/: main.rs
apps/movies-db/src/domain/entity/: mod.rs  (+1 more)
apps/movies-db/src/infra/: api_doc.rs  api_response.rs  mod.rs
apps/movies-db/src/usecase/: get_all_movies_usecase.rs  mod.rs
(+15 files in other folders)
