[package]
name = "movies-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
utoipa = { version = "3.3.0", features = ["rocket_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["rocket"] }
