[package]
name = "movies-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
csv = "1.3.0"
erased-serde = "0.3.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features= ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.5.0", features = ["rocket_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
uuid = { version = "1.5.0", features = ["v4"] }
